# lc3tools

./: .gitignore  CMakeLists.txt
docs/: API2110.md  TEST2110.md
src/backend/: aliases.h  asm_types.cpp  asm_types.h  assembler.cpp  assembler.h  callback.cpp  callback.h  converter.cpp  converter.h  decoder.cpp  decoder.h  device.cpp  device.h  device_regs.h  encoder.cpp  encoder.h  event.cpp  event.h  func_type.cpp  func_type.h  inputter.h  interface.cpp  interface.h  intex.cpp  intex.h  isa.h  isa_abstract.cpp  isa_abstract.h  isa_encoding.cpp  isa_impl.cpp  lc3os.cpp  lc3os.h  logger.h  mem.cpp  mem.h  paths.h  printer.h  simulator.cpp  simulator.h  state.cpp  (+7 more)
src/cli/: asm_main.cpp  file_printer.h  sim_main.cpp
src/common/: common.cpp  common.h  console_inputter.cpp  console_inputter.h  console_printer.cpp  console_printer.h  null_printer.h
src/gui/: package.json
src/gui/local_modules/lc3interface/: package.json  ui_inputter.h  ui_printer.h  wrapper.cpp
src/gui/src/main/: index.dev.js  index.js
src/gui/src/renderer/: App.vue  main.js
src/gui/src/renderer/assets/: global-styles.css
src/gui/src/renderer/components/editor/: Editor.vue  completions.js
src/gui/src/renderer/store/modules/: Counter.js  (+2 more)
src/test/: CMakeLists.txt  framework.h  framework1.cpp  framework1.h  framework2.cpp  framework2.h  framework2110.cpp  framework2110.h  framework_common.cpp  framework_common.h
src/test/tests/samples/: binsearch.cpp  interrupt1.cpp  interrupt2.cpp  intersection.cpp  nim.cpp  polyroot.cpp  pow2.cpp  rotate.cpp  shift.cpp  sort.cpp  tutorial_grader.cpp
(+1 files in other folders)
